# blog

./: .dockerignore  .envrc  .gitignore  .prettierignore  Dockerfile  README.md  app.ml  blog.opam  dependencies.opam  docker-compose.yml  dune  dune-project  entrypoint.sh  fly.toml  litestream.yml  package.json  style.css  tailwind.config.js  watch.sh
middleware/: dune  middleware.ml
models/: datetime.ml  datetime.mli  dune  post.ml  uuid.ml  uuid.mli
posts/: blog-in-ocaml.md
public/: index.html
public/css/: style.1.css  style.css
routes/: api.ml  assets.ml  dune  post.ml  router.ml  routes.ml  template.html
terraform/: .terraform.lock.hcl  main.tf  outputs.tf
tests/: dune  routes_test.ml  util_tests.ml
tests/fixtures/: hash-post.md
tests/load/: artillery.yaml
util/: db.ml  dune  environment.ml  environment.mli  errors.ml  hash.ml  hash.mli  http.ml  http.mli
